# ai-agent-system

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_LIFECYCLE.md  DECISIONS.md  Dockerfile  IaC_DOCUMENTATION.md  LEVEL_200_300_IMPLEMENTATION.md  LICENSE  PROJECT_FLOW.md  QUICK_START.md  README.md  SYSTEM_GUIDE.md  TESTING_GUIDE.md  USAGE_GUIDE.md  [CloudKinetics]AI_Data_Cloud_SA_Intern_assignment.md  alembic.ini  config.py  docker-compose.yml  docker-pip-constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.continue/agents/: new-config.yaml
.github/workflows/: ci.yml
ai_agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 1f830d78be7f_initial_schema_conversation_sessions_.py  721be6e314db_add_session_state_table_for_persistent_.py
app/: exceptions.py  main.py
app/agent/: graph.py  memory.py  router.py  schemas.py  state.py  workflow.py
app/agent/tools/: __init__.py  check_order_status.py  get_user_profile.py  recall_facts.py  record_fact.py  registry.py  search_knowledge_base.py  update_shipping_address.py
app/auth/: dependencies.py  jwt_handler.py
app/data/: models.py
app/memory/: __init__.py  episodic.py  semantic.py
app/pii/: redactor.py
app/rag/: answer_schema.py  chunker.py  data_lifecycle.py  ingest.py  pipeline.py  rerank.py  retriever.py
app/services/: data_introspection.py  llm.py  metrics.py  observability.py
app/tools/: order_status.py
audit-reports/: ai-agent-system-audit-report.md  ai-agent-system-audit-summary.md  audit-phase-A.md  audit-phase-B.md  audit-phase-C.md  audit-phase-D.md  my-requests.txt
docs/: 10-KFormDocumentSummarization  ASSIGNMENT_ALIGNMENT.md  AUDIT_REPORT.md  DEMO_STORYBOARD.md  PORTFOLIO_PREP_CHECKLIST.md  PRESENTATION_OUTLINE.md  PUBLICATION_GUIDE.md
docs/diagrams/: architecture.md  data_flow.md  service_interactions.md
frontend/: streamlit_app.py
observability/: README.md  loki-config.yml  prometheus.yml
prompts/: phase-a.md  phase-b.md  phase-c.md  phase-d.md
system_architecture_documents_v1.0/: 00_ARCHITECTURE_MAP.md  01_IMPLEMENTATION_AUDIT.md  02_INTERVIEW_PREP.md  03_LANDMINES.md  04_MOCK_INTERVIEW_LOG.md  05_PRESENTATION_SCRIPT.md  06_CLOUD_MIGRATION_PLAN.md
system_architecture_documents_v1.0/evidence/: feature_matrix.md  module_usage_map.md  runtime_callgraph.md
tests/: conftest.py  run_all_tests.py  setup_db.py  test_core.py  test_integration.py  validate_project.py
tests/integration/: test_api.py
tests/unit/: test_agent_state.py  test_auth.py  test_config.py  test_data_models.py  test_exceptions.py  test_llm.py  test_metrics.py  test_observability.py  test_observability_module.py  test_pii.py  test_rag_retriever.py  test_schemas.py  test_tool_registry.py
