[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-system"
version = "1.0.0"
description = "Conversational AI Agent with RAG and order workflow capabilities"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "langchain-core>=1.3",
    "langchain-community>=0.4",
    "langchain-openai>=1.1",
    "langchain-huggingface>=1.2",
    "langchain-text-splitters>=1.1",
    "chromadb>=1.5",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "structlog>=25.1",
    "prometheus-client>=0.21",
    "tenacity>=8.5",
    "tiktoken>=0.7",
    "pypdf>=5.0",
    "httpx>=0.28",
    "requests>=2.31",
    "alembic>=1.18",
    "pyjwt>=2.8",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.20",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
optional-dependencies = {dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "httpx>=0.28",
    "respx>=0.21",
    "bandit>=1.7",
]}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["app.*"]
allow_redefinition = true

[[tool.mypy.overrides]]
module = ["app.data.models"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.main"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (excluded from CI by default).",
]

[tool.bandit]
exclude_dirs = ["tests", ".github"]
skips = ["B101", "B311"]

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/agent/graph.py",
    "app/agent/memory.py",
    "app/memory/*",
    "app/rag/*",
    "app/services/data_introspection.py",
]
